--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "com.unity.perception": "1.0.0-preview.1"
   },
-  "description": "Enhancing tool for generating large-scale Multi-View Video Dataset in the style of the wildtrack dataset.",
+  "description": "Enhancing tool for generating large-scale Multi-View Video Dataset in the style of the Wildtrack dataset.",
   "displayName": "WildPerception",
   "name": "com.tsingloo.wildperception",
   "unity": "2022.2",
@@ -10,9 +10,8 @@
     "type": "git",
     "url": "https://github.com/TsingLoo/com.tsingloo.wildperception.git"
   },
-  "unityRelease": "3f1",
-  "documentationUrl": "https://www.tsingloo.com",
-  "changelogUrl": "https://www.tsingloo.com",
-  "version": "0.1.0",
+  "documentationUrl": "https://www.tsingloo.com/2023/04/17/30f04f8910004f9f8a5618953b65f887/",
+  "changelogUrl": "https://www.tsingloo.com/2023/04/17/30f04f8910004f9f8a5618953b65f887/",
+  "version": "0.1.1",
   "author": "TsingLoo <TsingLoo@Outlook.com> (https://www.tsingloo.com)"
 }
