--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
-    "com.unity.perception": "1.0.0-preview.1"
+    "com.unity.perception": "1.0.0-preview.1",
+    "com.unity.ai.navigation": "1.1.3"
   },
   "description": "Enhancing tool for generating large-scale Multi-View Video Dataset in the style of the Wildtrack dataset.",
   "displayName": "WildPerception",
@@ -12,6 +13,6 @@
   },
   "documentationUrl": "https://www.tsingloo.com/2023/04/17/30f04f8910004f9f8a5618953b65f887/",
   "changelogUrl": "https://www.tsingloo.com/2023/04/17/30f04f8910004f9f8a5618953b65f887/",
-  "version": "0.1.1",
+  "version": "0.1.2",
   "author": "TsingLoo <TsingLoo@Outlook.com> (https://www.tsingloo.com)"
 }
